# VoiceScanAI_ScamDetect

./: Dataset.md  README.md  Trainmodel_base.ipynb  VietVoiceAI.ipynb  scamtext_dataset_vn.txt
my_app/: README.md
my_app/android/app/: build.gradle.kts
my_app/android/app/src/main/: AndroidManifest.xml
my_app/android/app/src/main/assets/models/: aasist_mobile.pt  aasist_mobile.ptl  scam_fasttext_mobile.ftz  textcnn_mobile.pt  textcnn_vocab.json
my_app/android/app/src/main/assets/models/former-30M-RNNT-6000h/: decoder-epoch-20-avg-10.int8.onnx
my_app/android/app/src/main/cpp/: CMakeLists.txt  fasttext_jni.cpp
my_app/android/app/src/main/kotlin/com/example/my_app/: AudioRecordManager.kt  CallStateReceiver.kt  DetectionScore.kt  MainActivity.kt  OverlayController.kt  ScamDetectionForegroundService.kt
my_app/android/app/src/main/kotlin/com/example/my_app/ml/: AssetModelStore.kt  ConformerFeatureExtractor.kt  DetectionAggregator.kt  DetectionEngines.kt  FastTextNative.kt  FastTextNativeClassifier.kt  FftPowerSpectrum.kt  RealtimeDetectionPipeline.kt  RollingAudioBuffer.kt  SherpaZipformerSpeechRecognizerEngine.kt  StubEngines.kt  TextCnnTorchClassifier.kt  TorchAasistDetector.kt  TorchConformerDetector.kt
my_app/lib/: main.dart
my_app/test/: widget_test.dart
